--- a/notes/notes.ipynb
+++ b/notes/notes.ipynb
@@ -1008,28 +1008,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Example1.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-c88fecdf3acf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#use the line read from a file to write another file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Example1.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;32mas\u001b[0m \u001b[0mreadfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Example2.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwritefile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreadfiles\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                 \u001b[0mwritefile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Example1.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am the stupid dog of Jennifer.\n",
+      "\n",
+      "from Z.L.\n",
+      "\n",
+      "I am the stupid dog of Jennifer.\n",
+      "\n",
+      "from Z.L.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "#use the line read from a file to write another file\n",
     "with open (\"Example1.txt\",\"r\")as readfile:\n",
-    "    with open (\"Example2.txt\",\"w\") as writefile:\n",
-    "            for line in readfiles:\n",
+    "    with open (\"Example2.txt\",\"r+\") as writefile: # \"w\" for write; \n",
+    "                                                  # \"r+\" for read and write\n",
+    "            for line in readfile:\n",
+    "                print(line)\n",
     "                writefile.write(line)\n",
-    "                "
+    "                \n",
+    "            for line in writefile:\n",
+    "                print(line)"
    ]
   },
   {
@@ -1037,17 +1044,21 @@
    "metadata": {},
    "source": [
     "- Loading data with pandas\n",
+    "\n",
     "e.g\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "csv_path = 'file1.csv'\n",
-    "df=pd.read_csv(csv_path)\n"
+    "\n",
+    "df=pd.read_csv(csv_path) # data frame\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
